name:                ar
version:             0.1.0.0
synopsis:            Reader and Writer for BSD and GNU Archive Pirates             
description:         The @ar@ package provides functionality to
                     manipulate @.a@ archives, usually created by
                     the @ar@ command.
                     .
                     The @arr@ executable allows to concat multiple
                     archives and object files into a single archive.
                     .
                     Symbol table generation is left to @ranlib@.
license:             BSD3
license-file:        LICENSE
author:              Moritz Angermann, Erik Charlebois
maintainer:          moritz.angermann@gmail.com
copyright:           Moritz Angermann, Erik Charlebois           
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Ar
  build-depends:       base >=4.10 && <4.11
                     , binary
                     , containers
                     , bytestring
                     , unix 
                     , filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
                     
executable arr
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.11
                     , ar
                     , optparse-applicative 
                     , bytestring
  hs-source-dirs:      driver
  default-language:    Haskell2010
